# godot-minigame

./: .gitignore  README.md  project.godot  pyproject.toml
docs/agent/: AGENT_CONTEXT.md  agent-instructions.md  signal-routing-panic-agent-ready-spec.md
game/audio/: audio_hooks.gd  audio_hooks.gd.uid  music_player.gd  music_player.gd.uid
game/audio/music/: gameaudio.mp3.import
game/audio/sfx/: confirm.mp3.import  corrupted_spawn.mp3.import  countdown_tick.mp3.import  game_over.mp3.import  level_complete.mp3.import  overload.mp3.import  overload_warning.mp3.import  signal_delivered.mp3.import  ui_click.mp3.import
game/levels/: level_01.json  level_02.json  level_03.json  level_04.json  level_05.json  level_06.json  level_07.json
game/scenes/: gameplay.gd  gameplay.gd.uid  gameplay.tscn  main_menu.gd  main_menu.gd.uid  main_menu.tscn
game/systems/: component_rules.gd  component_rules.gd.uid  directions.gd  directions.gd.uid  game_session.gd  game_session.gd.uid  level_loader.gd  level_loader.gd.uid  signal_simulator.gd  signal_simulator.gd.uid
game/ui/: board_view.gd  board_view.gd.uid  hud.gd  hud.gd.uid  hud.tscn  menu_background.gd  menu_background.gd.uid  menu_panel.gd  menu_panel.gd.uid  menu_panel.tscn
